--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Hero -->
   <header class="text-center">
     <div class="container">
-      <h1 class="display-5">Application Development of Websites through AI Assistance</h1>
+      <h1 class="display-5">Web Application Development through AI Assistance</h1>
       <p class="lead">Simple, Smart & Affordable Web Apps – Powered by AI</p>
       <a href="#contact" class="btn btn-primary btn-lg mt-3">Let's Talk</a>
     </div>
